--- a/index.html
+++ b/index.html
@@ -34,7 +34,14 @@
                                 class="fas fa-search"></i></button>
                     </div>
                 </div>
-
+                <!--Below shows a list of searched cities-->
+                <div class="card">
+                    <div class="card-body">
+                        <ul class="list-group-flush" id="city-list">
+                            <li class="list-group-item"></li>
+                        </ul>
+                    </div>
+                </div>
 
 </body>
 
