--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link to css  -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="C:\Users\cassi\bootcamp\CHALLENGES\Weather-Dashboard\Assets\style.css">
     <!-- Link to Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -13,16 +13,13 @@
 </head>
 
 <body>
-    <div class="container">
-        <!-- Beginning of Jumbotron  -->
-        <div class=" jumbotron-fluid bg-dark text-white text-center">
-            <div class="container">
-                <h1 class="display-4 ">Weather Dashboard</h1>
-            </div>
-        </div>
+    <!--Header-->
+    <div class="topnav">
+        <h1>Weather Dashboard</h1>
     </div>
 
-    <!--Below shows how to search for city-->
+    </nav>
+    <!--Search for city-->
     <div class="container">
         <div class="row">
             <div class="col-sm-2 bg-light">
@@ -34,7 +31,7 @@
                                 class="fas fa-search"></i></button>
                     </div>
                 </div>
-                <!--Below shows a list of searched cities-->
+                <!--List of searched cities will appear here-->
                 <div class="card">
                     <div class="card-body">
                         <ul class="list-group-flush" id="city-list">
@@ -42,9 +39,38 @@
                         </ul>
                     </div>
                 </div>
+                <!--City history clear button-->
+                <button onclick="deleteItems()" class="btn btn-primary mt-3" type="button" id="clear-history">Clear City
+                    History</button>
+            </div>
 
+            <!-- Weather information for current city -->
+            <div class="col-sm-10 mt-3">
+                <div class="row-sm-10 mx-2 border border-dark rounded">
+                    <div class="col-sm-10 mx-2" id="current-weather">
+                        <p class="city-name" id="current-city"></p>
+                        <p class="current" id="temperature"></p>
+                        <p class="current" id="humidity"></p>
+                        <p class="current" id="wind-speed"></p>
+                        <p class="current" id="uv-index"></p>
+                    </div>
+                </div>
+                <!--5 day forecast -->
+                <h4 class="pt-2">5 Day Forecast:</h4>
+                <div class="row row-cols-1 row-cols-sm-10 g-4 m-2" id="forecast">
 
-                
+                </div>
+
+            </div>
+        </div>
+        <br>
+    </div>
+
+    <!--jquery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
+    <script src="https://unpkg.com/dayjs@1.8.21/plugin/utc.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 
 </html>
