added acceptance criteria to dos, created api key, deleted css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 </head>
 
 <body>
+<!-- TO DO: CREATE SEARCH FOR A CITY BOX -->
+
+
+<!-- TO DO: CREATE TODAYS WEATHER BOX -->
+
+
+<!-- TO DO: CREATE 5 DAY FORECAST BOX -->
+
 
 
     <!--jquery-->
