--- a/index.html
+++ b/index.html
@@ -5,25 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link to css  -->
-    <link rel="stylesheet" type="text/css" href="C:\Users\cassi\bootcamp\CHALLENGES\Weather-Dashboard\Assets\style.css">
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- Link to Bootstrap -->
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Weather Dashboard</title>
 </head>
 
 <body>
-<!-- TO DO: CREATE SEARCH FOR A CITY BOX -->
+    <header class="header text-center">
+        <h1>Weather Dashboard</h1>
+    </header>
+
+    <!-- TO DO: CREATE SEARCH FOR A CITY BOX -->
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <input id="search-input" type="text" placeholder="Enter City Name Here"/>
+                <br />
+                    <button id="search-button" class="btn btn-primary" type="button">
+                        Search
+                    </button>
+                </div>
+                <br />
+                <div class="recent-searches">
+                    <h6>Recent searches:</h6>
+                </div>
+            </div>
+
+            <!-- TO DO: CREATE TODAYS WEATHER BOX -->
 
 
-<!-- TO DO: CREATE TODAYS WEATHER BOX -->
-
-
-<!-- TO DO: CREATE 5 DAY FORECAST BOX -->
+            <!-- TO DO: CREATE 5 DAY FORECAST BOX -->
 
 
 
-    <!--jquery-->
-
+            <!--jquery-->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+                crossorigin="anonymous"></script>
 </body>
 
 </html>
