--- a/index.html
+++ b/index.html
@@ -20,30 +20,43 @@
     <!-- TO DO: CREATE SEARCH FOR A CITY BOX -->
     <div class="container">
         <div class="row">
-            <div class="col">
-                <input id="search-input" type="text" placeholder="Enter City Name Here"/>
+            <div class="col col-md=3 card card-body">
+                <input id="search-input" type="text" placeholder="Enter City Name Here" />
                 <br />
-                    <button id="search-button" class="btn btn-primary" type="button">
-                        Search
-                    </button>
+                <button id="search-button" class="btn btn-primary" type="button">
+                    Search
+                </button>
+            </div>
+            <br />
+            <div class="recent-searches">
+                <h6>Recent searches:</h6>
+            </div>
+        </div>
+
+        <!-- TO DO: CREATE TODAYS WEATHER BOX -->
+        <div class="card">
+            <div class="row">
+                <div class="col">
+                    <img src="..." class="img-fluid rounded-start" alt="...">
                 </div>
-                <br />
-                <div class="recent-searches">
-                    <h6>Recent searches:</h6>
+                <div class="col-md-10">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                    </div>
                 </div>
             </div>
+        </div>
 
-            <!-- TO DO: CREATE TODAYS WEATHER BOX -->
-
-
-            <!-- TO DO: CREATE 5 DAY FORECAST BOX -->
+        <!-- TO DO: CREATE 5 DAY FORECAST BOX -->
 
 
 
-            <!--jquery-->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-                crossorigin="anonymous"></script>
+        <!--jquery-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
