changed todays weather template to have weather words

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
                 </div>
                 <div class="col-md-10">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title">City Name Current Date</h5>
+                        <p class="card-text">Temperature: </p>
+                        <p class="card-text">Wind Speed: </p>
+                        <p class="card-text">Humidity: </p>
                     </div>
                 </div>
             </div>
