--- a/index.html
+++ b/index.html
@@ -57,60 +57,47 @@
             <div class="card">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                </div>
-                <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
+                    <h5 class="card-title">Date</h5>
+                    <p class="card-text">Temperature: </p>
+                    <p class="card-text">Wind Speed: </p>
+                    <p class="card-text">Humidity: </p>
                 </div>
             </div>
             <div class="card">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
-                    </p>
+                    <h5 class="card-title">Date</h5>
+                    <p class="card-text">Temperature: </p>
+                    <p class="card-text">Wind Speed: </p>
+                    <p class="card-text">Humidity: </p>
                 </div>
-                <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
+            </div>            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Date</h5>
+                    <p class="card-text">Temperature: </p>
+                    <p class="card-text">Wind Speed: </p>
+                    <p class="card-text">Humidity: </p>
                 </div>
             </div>
             <div class="card">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
-                    </p>
-                </div>
-                <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
+                    <h5 class="card-title">Date</h5>
+                    <p class="card-text">Temperature: </p>
+                    <p class="card-text">Wind Speed: </p>
+                    <p class="card-text">Humidity: </p>
                 </div>
             </div>
             <div class="card">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
-                    </p>
-                </div>
-                <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
+                    <h5 class="card-title">Date</h5>
+                    <p class="card-text">Temperature: </p>
+                    <p class="card-text">Wind Speed: </p>
+                    <p class="card-text">Humidity: </p>
                 </div>
             </div>
-            <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This card has even longer content than the first to show that equal height
-                        action.</p>
-                </div>
-                <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                </div>
-            </div>
-        </div>
 
 
         <!--jquery-->
