fixed section for current date and time, added css to date and time

--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
                 </div>
                 <div class="col-md-10">
                     <div class="card-body">
-                        <h5 class="card-title">City Name Current Date</h5>
+                        <h5 class="card-title">City Name</h5>
+                        <div class=" date-time ">
+                            <div id="current-date"> mmm/dd/yyyy</div>
+                            <div id="current-time">0:00</div>
+                        </div>
+                        <div class="weather-conditions"></div>
                         <p class="card-text">Temperature: </p>
                         <p class="card-text">Wind Speed: </p>
                         <p class="card-text">Humidity: </p>
