afterwatching several videos and reading articles, I learned I should be able to get the 5 day forecast with less code. need to test

--- a/index.html
+++ b/index.html
@@ -57,52 +57,60 @@
         </div>
 
         <!-- TO DO: CREATE 5 DAY FORECAST BOX -->
-        <h4>5 Day Weather Forecast:</h4>
+
+        <div class="row">
+            <div class="forecast-header">5 Day Forecast</div>
+            <div class="row" id="forecast"></div>
+        </div>
+
+
+
+        <!-- <h4>5 Day Weather Forecast:</h4>
         <div class="card-group">
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="..." class="day1img" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Date</h5>
-                    <p class="card-text">Temperature: </p>
-                    <p class="card-text">Wind Speed: </p>
-                    <p class="card-text">Humidity: </p>
+                    <h5 class="day1date">Date</h5>
+                    <p class="day1temp">Temperature: </p>
+                    <p class="day1wind">Wind Speed: </p>
+                    <p class="day1humid">Humidity: </p>
                 </div>
-            </div>
-            <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Date</h5>
-                    <p class="card-text">Temperature: </p>
-                    <p class="card-text">Wind Speed: </p>
-                    <p class="card-text">Humidity: </p>
+                <div class="card">
+                    <img src="..." class="day2img" alt="...">
+                    <div class="card-body">
+                        <h5 class="day2date">Date</h5>
+                        <p class="day2temp">Temperature: </p>
+                        <p class="day2wind">Wind Speed: </p>
+                        <p class="day2humid">Humidity: </p>
+                    </div>
                 </div>
-            </div>            <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Date</h5>
-                    <p class="card-text">Temperature: </p>
-                    <p class="card-text">Wind Speed: </p>
-                    <p class="card-text">Humidity: </p>
+                <div class="card">
+                    <img src="..." class="day3img" alt="...">
+                    <div class="card-body">
+                        <h5 class="day3date">Date</h5>
+                        <p class="day3temp">Temperature: </p>
+                        <p class="day3wind">Wind Speed: </p>
+                        <p class="day3humid">Humidity: </p>
+                    </div>
                 </div>
-            </div>
-            <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Date</h5>
-                    <p class="card-text">Temperature: </p>
-                    <p class="card-text">Wind Speed: </p>
-                    <p class="card-text">Humidity: </p>
+                <div class="card">
+                    <img src="..." class="day4img" alt="...">
+                    <div class="card-body">
+                        <h5 class="day4date">Date</h5>
+                        <p class="day4temp">Temperature: </p>
+                        <p class="day4wind">Wind Speed: </p>
+                        <p class="day4humid">Humidity: </p>
+                    </div>
                 </div>
-            </div>
-            <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Date</h5>
-                    <p class="card-text">Temperature: </p>
-                    <p class="card-text">Wind Speed: </p>
-                    <p class="card-text">Humidity: </p>
-                </div>
-            </div>
+                <div class="card">
+                    <img src="..." class="day5img" alt="...">
+                    <div class="card-body">
+                        <h5 class="day5date">Date</h5>
+                        <p class="day5temp">Temperature: </p>
+                        <p class="day5wind">Wind Speed: </p>
+                        <p class="day5humid">Humidity: </p>
+                    </div>
+                </div> -->
 
 
         <!--jquery-->
