trying to get something to show up. still researching.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
         </div>
 
         <!-- TO DO: CREATE TODAYS WEATHER BOX -->
-        <h4>Todays Weather:</h4>
+
+        <h4>Todays Weather</h4>
+        <div id="weather"></div>
+
+
+        <!-- <h4>Todays Weather:</h4>
         <div class="card">
             <div class="row">
                 <div class="col">
@@ -54,7 +59,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- TO DO: CREATE 5 DAY FORECAST BOX -->
 
