added new search button and header to html and js. going to re start everything again after watching several videos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weather Dashboard</title>
+    <!-- Below is the link to the css stylesheet -->
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header class="header">
+        <h1>Weather Dashboard</h1>
+    </header>
+
+    <!-- TO DO: CREATE SEARCH FOR A CITY BOX -->
+    <div class="search-container">
+        <input type="text" id="cityInput" class="search-input" placeholder="Enter City Name Here">
+        <button onclick="searchCity()" class="search-button">Search</button>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+    <!-- Below is the link to the script.js -->
+    <script src="script.js"></script>
+</body>
+
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link to css  -->
     <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- Link to Bootstrap -->
