added forecast container in html which will show information in js once js is added

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 
 
     <!-- TO DO: CREATE 5 DAY FORECAST BOX -->
-
+    <!--Below is the container for the 5 day forecast which will be called to in js for the date, icon, temperature, humidity, and wind speed-->
+    <div id="forecast-container" class="forecast-container"></div>
 
 
 
