--- a/index.html
+++ b/index.html
@@ -13,15 +13,24 @@
 
 <body>
     <!--Below is the title of the page-->
-    <header class="header">
-        <h1>Weather Dashboard</h1>
-    </header>
+<div class="jumbotron" style="margin-bottom:0px; color: white; background-color: purple;">
+    <h2 class="text-center" style="font-size:50px; font-weight:600;">Weather Dashboard</h2>
+</div>
 
     <!-- TO DO: CREATE SEARCH FOR A CITY BOX -->
-    <!--Below is the search container that says enter  city name and the search button-->
+    <!--Below is the search container that says enter city name and the search button-->
     <div class="search-container">
-        <input type="text" id="cityInput" class="search-input" placeholder="Enter City Name Here">
-        <button onclick="searchCity()" class="search-button">Search</button>
+        <div class="row">
+            <h3 class="text-center">Enter City Name</h3>
+        </div>
+
+        <div class="row form-group">
+            <input type="text" name="city" placeholder="City Name">
+            <button id="searchButton" class="btn btn-dark">Search</button>
+        </div>
+
+        <div id="display-results"></div>
+
     </div>
 
 
