--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Link to Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Below is the link to the css stylesheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Assets\css\style.css">
 </head>
 
 <body>
@@ -22,10 +22,11 @@
     <div class="search-container">
         <div class="row">
             <h3 class="text-center">Enter City Name</h3>
+            <span id="error"></span>
         </div>
 
         <div class="row form-group">
-            <input type="text" name="city" placeholder="City Name">
+            <input type="text" name="city" id="city" placeholder="City Name">
             <button id="searchButton" class="btn btn-dark">Search</button>
         </div>
 
@@ -71,11 +72,11 @@
 
 
     <!-- jQuery library -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- Below is the link to the script.js -->
-    <script src="script.js"></script>
+    <script src="Assets\js\script.js"></script>
 </body>
 
 </html>
