added finction to display the current weather for given location

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button id="searchButton" class="btn btn-dark">Search</button>
         </div>
 
-        <div id="display-results"></div>
+        <div id="display"></div>
 
     </div>
 
