added css folder, tried to get 5 day forecast in html and js, having trouble, try again later

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     <!-- TO DO: CREATE SEARCH FOR A CITY BOX -->
     <!--Below is the search container that says enter city name and the search button-->
+    <!-- TO DO: CREATE TODAYS WEATHER BOX -->
+    <!--Below is the current weather container which shows the city name, date, icon, temperature, humidity, and wind speed-->
     <div class="search-container">
         <div class="row">
             <h3 class="text-center">Enter City Name</h3>
@@ -35,40 +37,9 @@
     </div>
 
 
-
-    <!-- TO DO: CREATE TODAYS WEATHER BOX -->
-    <!--Below is the current weather container which shows the city name, date, icon, temperature, humidity, and wind speed-->
-    <div class="current-weather-container">
-        <div class="current-info">
-            <div class="current-icon-container">
-                <canvas id="current-icon" width="100" height="100"></canvas>
-            </div>
-
-            <div class="city-name" id="city-name">City</div>
-            <div class="date" id="date">Date</div>
-
-            <div class="current-weather" id="current-weather">
-                <div class="current-weather-stats">
-                    <div>Temperature</div>
-                    <div>TBD</div>
-                </div>
-                <div class="current-weather-stats">
-                    <div>Humidity</div>
-                    <div>TBD</div>
-                </div>
-                <div class="current-weather-stats">
-                    <div>Wind Speed</div>
-                    <div>TBD</div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
     <!-- TO DO: CREATE 5 DAY FORECAST BOX -->
     <!--Below is the container for the 5 day forecast which will be called to in js for the date, icon, temperature, humidity, and wind speed-->
-    <div id="forecast-container" class="forecast-container"></div>
+    <div id="forecast"></div>
 
 
     <!-- jQuery library -->
